@@ -1,3 +1,8 @@
+2010-12-10  6.6.6-5 Glenn Randers-Pehrson <glennrp@image...>
+  * Make the PNG encoder always rebuild the palette, to avoid losing
+    transparency when it is out of sync with the pixel data (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17655).
+
 2010-12-10  6.6.6-5 Cristy  <quetzlzacatenango@image...>
   * Account for virtual canvas for the -flip / -flop options (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=17626).
